# config

./: .vimrc  .zshrc  CMakeLists.txt  Dockerfile  install.py  plau.py  play.py  run.py
pre-commit/: .flake8  .isort.cfg  Pipfile  pyproject.toml
